<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/backgorund_alert_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/goBackButtonSendFeedback"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_back"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/blue" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendFeedback"
        android:textSize="19dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/goBackButtonSendFeedback"
        app:layout_constraintEnd_toEndOf="@+id/feedbackEditText"
        app:layout_constraintStart_toStartOf="@+id/feedbackEditText"
        app:layout_constraintTop_toTopOf="@+id/goBackButtonSendFeedback" />

    <EditText
        android:id="@+id/feedbackEditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/background_edit_text_login"
        android:drawableStart="@drawable/ic_message"
        android:drawablePadding="10dp"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/feedbackWithDot"
        android:inputType="text"
        android:paddingStart="15dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goBackButtonSendFeedback" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sendFeedbackBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/background_login_button_green"
        android:backgroundTint="@color/blue"
        android:gravity="center"
        android:text="@string/send"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/feedbackEditText"
        app:layout_constraintStart_toStartOf="@+id/feedbackEditText"
        app:layout_constraintTop_toBottomOf="@+id/feedbackEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>